Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.10.0-beta1
-
Fix Version/s: Qt Creator 4.10.0-rc1
-
Component/s: FakeVim
-
Labels:
-
Commits:9da307765194bd2db480bc7e523e378950bcd2de (qt-creator/qt-creator/4.10)
Description
Steps to reproduce:
- have a project open with underlying repository
- display git log for the project
- in FakeVim mode try to delete characters, lines or modify something directly from command mode (upper case..) or similar
(dd, x, ~, U, u, yy followed by p, ....)
Note: in Insert/Replace mode the readonly character of the vcs log widget seems to be honored and modifications aren't possible.