VCS: FakeVim: Ensure log editor is handled as readonly

Fixes: QTCREATORBUG-22595
Change-Id: Iab51eda5e55d36e98cf0ba5116853d6bee1dbd10
Reviewed-by: hjk <hjk@qt.io>